# tidy-tools

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  configure.cmd  configure.sh  install.cmd
driver/: run-tidy.sln
driver/Misc/: CountdownLatch.cs  Extensions.cs  Git.cs  Misc.csproj  P4.cs  Parallel.cs  Patcher.cs  Replacement.cs  Shell.cs  Timer.cs
driver/Misc/Properties/: AssemblyInfo.cs
driver/run-tidy/: ClangSource.cs  ClangTidy.cs  EarlyReturn.cs  EncapsulateDataMember.cs  GlobalSuppressions.cs  MTCounter.cs  Options.cs  Program.cs  ReplaceMemcpy.cs  RunTidy.cs  SampleTransform.cs  SmallTidyTransform.cs  Transform.cs  Transforms.cs  packages.config  run-tidy.csproj
driver/run-tidy/Properties/: AssemblyInfo.cs
sample/: compile_commands.json  memxxx.cpp  xxx.cpp
tools/: CMakeLists.txt
tools/ast-indexer/: AstIndexer.cpp  CMakeLists.txt
tools/clang-constifier/: CMakeLists.txt  ClangConstifier.cpp  Graph.hpp  Makefile  UseDefNode.hpp  utils.hpp
tools/clang-why/: CMakeLists.txt  main.cpp
tools/common-tidy/: CMakeLists.txt  Transform.cpp  Transform.hpp
tools/encapsulate-datamember/: CMakeLists.txt  EncapsulateDataMember.cpp  EncapsulateDataMember.hpp  EncapsulateDataMemberMain.cpp  README.md
tools/encapsulate-datamember/test/: datamembers.cpp
tools/small-tidy/: CMakeLists.txt  EarlyReturn.cpp  InitAtDeclare.cpp  NonAsciiLiteral.cpp  ReplaceMemcpy.cpp  Sample.cpp  SmallTidyMain.cpp  Transform.cpp  Transform.hpp  main.cpp  misc.hpp
